# longecho

./: .gitignore  CHANGELOG.md  CLAUDE.md  DESIGN-NOTES.md  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: docs.yml
docs/: echo-philosophy.md  getting-started.md  index.md  validator.md
docs/blog/: why-echo.md
docs/plans/: 2026-02-16-simplification-design.md  2026-02-16-simplification-impl.md
schemas/: manifest.schema.json
spec/: ECHO.md  LONGECHO.md  MANIFEST-SCHEMA.md  PERSONA-TK.md  STONE-TK.md  TOOLKIT-ECOSYSTEM.md  index.md
src/longecho/: __init__.py  __main__.py  build.py  checker.py  cli.py  discovery.py  manifest.py  serve.py
src/longecho/templates/: index.html  sfa.html  source.html
tests/: conftest.py  test_build.py  test_checker.py  test_cli.py  test_discovery.py  test_manifest.py  test_readme.py  test_serve.py
