[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "longecho"
version = "0.2.0"
description = "ECHO philosophy documentation, compliance validator, and site builder"
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
authors = [
    { name = "Alex Towell" }
]
keywords = ["echo", "archiving", "durability", "validator", "static-site"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "typer>=0.9.0",
    "rich>=13.0.0",
    "jinja2>=3.0.0",
    "markdown>=3.0.0",
    "pyyaml>=6.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
    "ruff>=0.4.0",
    "types-Markdown>=3.0.0",
]
docs = [
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.0.0",
]
full = [
    "datasette>=0.64.0",
]

[project.scripts]
longecho = "longecho.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/longecho"]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/tests",
    "/spec",
    "/docs",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]

[tool.black]
line-length = 88
target-version = ["py39"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false  # Gradual typing
check_untyped_defs = true
warn_redundant_casts = true
warn_unused_ignores = true
strict_optional = true
no_implicit_optional = true

# Per-module overrides for optional dependencies
[[tool.mypy.overrides]]
module = ["yaml"]
ignore_missing_imports = true

[tool.ruff]
target-version = "py39"
line-length = 88

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # function call in argument default (Typer standard pattern)
    "SIM102", # nested if (sometimes more readable)
]

[tool.ruff.lint.isort]
known-first-party = ["longecho"]
